@@ -1,12 +1,10 @@
 package com.payroll.controller;
 
-import com.payroll.dtos.employee.EmployeeRequestDTO; 
-import com.payroll.dtos.employee.EmployeeResponseDTO; 
 import com.payroll.entity.Employee;
+import com.payroll.dto.EmployeeDTO;
 import com.payroll.entity.User;
 import com.payroll.service.EmployeeService;
 import com.payroll.service.UserService;
-import jakarta.validation.Valid; 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -14,14 +12,14 @@ import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.*;
 
+
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/employees")
-public class EmployeeController implements IEmployeeController { 
+public class EmployeeController {
 
     @Autowired
     private EmployeeService employeeService;
@@ -29,154 +27,76 @@ public class EmployeeController implements IEmployeeController {
     @Autowired
     private UserService userService;
 
-    
-
-    
-    private EmployeeResponseDTO toResponseDTO(Employee employee) {
-        if (employee == null) return null;
-        
-        
-        
-        EmployeeResponseDTO dto = new EmployeeResponseDTO();
-        dto.setId(employee.getId());
-        dto.setFullName(employee.getFullName());
-        dto.setCpf(employee.getCpf()); 
-        dto.setPosition(employee.getPosition());
-        dto.setSalary(employee.getSalary());
-        dto.setAdmissionDate(employee.getAdmissionDate());
-        dto.setCreatedAt(employee.getCreatedAt());
-        
-
-        return dto;
-    }
-
-    
-    private Employee fromRequestDTO(EmployeeRequestDTO requestDTO) {
-        
-        Employee employee = new Employee();
-        
-        
-        employee.setFullName(requestDTO.getFullName());
-        employee.setCpf(requestDTO.getCpf());
-        employee.setRg(requestDTO.getRg());
-        employee.setPosition(requestDTO.getPosition());
-        employee.setSalary(requestDTO.getSalary());
-        employee.setAdmissionDate(requestDTO.getAdmissionDate());
-        employee.setDependents(requestDTO.getDependents());
-        employee.setWeeklyHours(requestDTO.getWeeklyHours());
-        
-
-        return employee;
-    }
-
-    
-
-    
+    // Listar todos os funcionários
     @GetMapping
-    @Override
-    public ResponseEntity<List<EmployeeResponseDTO>> listEmployees() {
+    public ResponseEntity<List<EmployeeDTO>> listEmployees() {
         List<Employee> employees = employeeService.getAllEmployees();
-        
-        
-        List<EmployeeResponseDTO> dtos = employees.stream()
-            .map(this::toResponseDTO)
-            .collect(Collectors.toList());
-            
+        List<EmployeeDTO> dtos = employees.stream().map(EmployeeDTO::fromEntity).toList();
         return ResponseEntity.ok(dtos);
     }
 
-    
-    @PostMapping
-    @Override
-    
-    public ResponseEntity<?> createEmployee(@RequestBody @Valid EmployeeRequestDTO requestDTO,
-                                            @AuthenticationPrincipal UserDetails currentUser) {
-        
-        
-
-        
-        if (employeeService.existsByCpf(requestDTO.getCpf())) {
-            return ResponseEntity.status(HttpStatus.CONFLICT)
-                    .body("CPF já cadastrado");
-        }
-        
-        
-        Employee employeeToSave = fromRequestDTO(requestDTO);
-
-        
-        Long userId = null;
-        if (currentUser != null) {
-            User user = userService.findByUsername(currentUser.getUsername()).orElse(null);
-            userId = user != null ? user.getId() : null;
-        }
-
-        Employee saved = employeeService.createEmployee(employeeToSave, userId);
-        
-        
-        EmployeeResponseDTO responseDTO = toResponseDTO(saved);
-        
-        return ResponseEntity.status(HttpStatus.CREATED).body(responseDTO);
+    // Criar um novo funcionário
+   @PostMapping
+public ResponseEntity<?> createEmployee(@RequestBody Employee employee,
+                                        @AuthenticationPrincipal UserDetails currentUser) {
+    if (employeeService.existsByCpf(employee.getCpf())) {
+        return ResponseEntity.status(HttpStatus.CONFLICT)
+                .body("CPF já cadastrado");
     }
 
+    // Obter ID do usuário logado, mas permitir teste sem user
+    Long userId = null;
+    if (currentUser != null) {
+        User user = userService.findByUsername(currentUser.getUsername()).orElse(null);
+        userId = user != null ? user.getId() : null;
+    }
 
-    
+    Employee saved = employeeService.createEmployee(employee, userId);
+    return ResponseEntity.status(HttpStatus.CREATED).body(EmployeeDTO.fromEntity(saved));
+}
+
+
+    // Visualizar funcionário por ID
     @GetMapping("/{id}")
-    @Override
     public ResponseEntity<?> viewEmployee(@PathVariable Long id) {
         Optional<Employee> employee = employeeService.getEmployeeById(id);
-        
         if (employee.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body("Funcionário não encontrado");
         }
-        
-        
-        EmployeeResponseDTO responseDTO = toResponseDTO(employee.get());
-        
-        return ResponseEntity.ok(responseDTO);
+        return ResponseEntity.ok(EmployeeDTO.fromEntity(employee.get()));
     }
 
-    
+    // Atualizar funcionário
     @PutMapping("/{id}")
-    @Override
-    
-    public ResponseEntity<?> updateEmployee(@PathVariable Long id,
-                                            @RequestBody @Valid EmployeeRequestDTO requestDTO) {
-        try {
-            
-            Employee employeeData = fromRequestDTO(requestDTO);
-            
-            Employee updatedEmployee = employeeService.updateEmployee(id, employeeData);
+public ResponseEntity<?> updateEmployee(@PathVariable Long id,
+                                        @RequestBody Employee employee) {
+    try {
+        Employee updatedEmployee = employeeService.updateEmployee(id, employee);
+        return ResponseEntity.ok(EmployeeDTO.fromEntity(updatedEmployee));
 
-            
-            EmployeeResponseDTO responseDTO = toResponseDTO(updatedEmployee);
-
-            
-            return ResponseEntity.ok(responseDTO);
-
-        } catch (NoSuchElementException e) {
-            
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body("Funcionário não encontrado");
-        } catch (Exception e) {
-            
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("Erro ao atualizar funcionário: " + e.getMessage());
-        }
+    } catch (NoSuchElementException e) {
+        // Se não existir retorna 404
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body("Funcionário não encontrado");
+    } catch (Exception e) {
+        // Para outros errosretorna 500
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body("Erro ao atualizar funcionário: " + e.getMessage());
     }
+}
 
 
-    
-    @DeleteMapping("/{id}")
-    @Override
-    public ResponseEntity<?> deleteEmployee(@PathVariable Long id) {
-        try {
-            employeeService.deleteEmployee(id);
-            return ResponseEntity.ok("Deletado com sucesso");
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("Erro ao excluir funcionário: " + e.getMessage());
-        }
+    // Deletar funcionário
+   @DeleteMapping("/{id}")
+public ResponseEntity<?> deleteEmployee(@PathVariable Long id) {
+    try {
+        employeeService.deleteEmployee(id);
+        return ResponseEntity.ok("Deletado com sucesso");
+    } catch (Exception e) {
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body("Erro ao excluir funcionário: " + e.getMessage());
     }
+}
 
 }
